objects/Default_Preference_Mappings__c.object
<CustomObject>
    <fields>
        <fullName>Country_details_lookup_field__c</fullName>
        <label>Country details lookup field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_field__c</fullName>
        <label>Country field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_field__c</fullName>
        <label>Currency field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_country_territory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabled the country/territory deduction</description>
        <inlineHelpText>Enabled the country/territory deduction</inlineHelpText>
        <label>Enable country/territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_flag_language__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabled the flag/language deduction</description>
        <inlineHelpText>Enabled the flag/language deduction</inlineHelpText>
        <label>Enable flag/language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_timezone__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables the timezone call</description>
        <inlineHelpText>Enables the timezone call</inlineHelpText>
        <label>Enable timezone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_field__c</fullName>
        <label>Language field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode_field__c</fullName>
        <label>PostalCode field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_field__c</fullName>
        <label>Region field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_field__c</fullName>
        <label>Territory field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone_field__c</fullName>
        <label>Timezone field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>